# atiaTTS

./: .gitignore  a.txt  api.http  api2.http  b.txt  readme.md
.devcontainer/: devcontainer.json
api/: .gitignore  Cargo.toml  api.http
api/src/: db.rs  espeaker.rs  legacy_db.rs  legacy_main.rs  main.rs  tts_api.rs  user_api.rs
api/src/tts_api/: tts_db.rs  tts_mod.rs
api/src/user_api/: user_db.rs  user_mod.rs
client/: commands.txt  file.html  home.html  index.html  indigo.html  inicio.css  inicio.html  inicio.js  package.json  planes.html  principal.css  principal.html  principal.js  pro_tts.html  pro_tts_files.html  registro.css  registro.html  registro.js
client/atia-tts/: package-lock.json  package.json
client/atia-tts/src-tauri/: Cargo.toml  tauri.conf.json
client/atia-tts/src-tauri/src/: main.rs
client/login/: inicio.css  inicio.html  inicio.js
client/media/: Gabriel Miro - Del Huerto Provinciano.epub  Gabriel-Miro-Del-Huerto-Provinciano.txt
client/otherStuff/: indigo.html  plus_tts.html
client/planes/: planes.html
client/principal/: file-functions.js  principal.css  principal.html  principal.js  text-functions.js  ui-functions.js
client/registro/: registro.css  registro.html  registro.js
file/: Cargo.toml
file-file/: .gitignore  Cargo.toml
file-file/src/: main.rs
file-file/static/: index.html
file-file/temp_uploads/: 4ac61597-3cff-42bf-afc9-8101ab0e4e84-a.txt
file-progress/: .gitignore  Cargo.toml
file-progress/src/: main.rs
file-progress/static/: index.html
file/src/: main.rs
file/static/: index.html
server/node/: server.js
server/node/rust/src/: main.rs
website/: index.html  main.js  package.json
