[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.30.0", features = ["bundled"] }
