[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
rusqlite = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.5", features = ["v4", "serde"] }
actix-multipart = "0.6"
futures = "0.3"
actix-cors = "0.7.1"
bytes = "1.10.1"
futures-util = "0.3.31"
sanitize-filename = "0.6.0"
env_logger = "0.11.8"
