[package]
name = "file-progress"
version = "0.1.0"
edition = "2024"

[dependencies]
actix = "0.13"
actix-web = "4"
actix-web-actors = "4.1"
actix-files = "0.6"
tokio = { version = "1", features = ["full"] } # Necesario para ejecutar comandos async
serde = { version = "1.0", features = ["derive"] } # Para serializar/deserializar mensajes WS
serde_json = "1.0" # Para trabajar con JSON
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.9"
bytes = "1"
futures = "0.3" # Para StreamExt
rand = "0.8" # Para generar IDs si no usas UUID para jobs