[package]
name = "file"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-ws = "0.2" # O la versión compatible más reciente con actix-web 4
futures-util = { version = "0.3", features = ["sink"] }
tokio = { version = "1", features = ["full"] } # Necesitamos mpsc y rt
rand = "0.8" # Para nombres de archivo temporales únicos
